--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body::before {
     align-items: center;
     position: absolute;
     bottom: 0;
+    text-align: center;
 }
 
 .container__informacoes {
